# Model-Engine

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
exports/: momentum_surge.strat
logs/: gui_log_20260323_151718.txt  gui_log_20260324_004109.txt  gui_log_20260324_005846.txt
src/: backtester.py  bundler.py  config.py  controller.py  database.py  engine.py  exceptions.py  fetcher.py  gui_launcher.py  live_node.py  logger.py  metrics.py  signals.py  snapshot.py  strategy.py  workspace.py
src/core/: backtester.py  bundler.py  controller.py  data_broker.py  engine.py  live_node.py  metrics.py
src/daemon/: jobs_db.py  main.py  models.py  tasks.py  worker.py
src/data_broker/: __init__.py  data_broker.py  database.py  fetcher.py
src/engine/: backtester.py  bundler.py  controller.py  workspace.py
src/features/: Plan.md  adx.py  anchored_vwap.py  atr.py  base.py  bollinger_bands.py  bollinger_width.py  features.py  keltner_channels.py  macd.py  moving_avg.py  obv.py  roc.py  rsi.py  stochastic.py  support_resistance.py  volume_zscore.py  vwap.py
src/ml_bridge/: inference.py  orchestrator.py  target_builder.py
src/optimization/: cpcv_splitter.py  local_cache.py  optimizer_core.py  ray_cluster.py
tests/: conftest.py  test_cpcv_logic.py  test_daemon.py  test_data_fetcher.py  test_feature_memory_violation.py  test_feature_orchestrator.py  test_local_backtester.py  test_optimizer_routing.py  test_ray_cache_lifecycle.py  test_workspace_flow.py
tests/engine/: test_backtester.py  test_bundler.py  test_controller.py  (+6 more)
(+56 files in other folders)
